Update 1B7D wasted memory

--- a/dos33.html
+++ b/dos33.html
@@ -8301,6 +8301,7 @@ I've annotated <a class='mem'>*wastes*</a> locations in the listing where memory
 <br>&nbsp; &nbsp; &nbsp; LDA ADRTAB+1,X
 <br>&nbsp; &nbsp; &nbsp; TAY
 <br>To:
+<br>&nbsp; &nbsp; &nbsp; LDY ADRTAB+1,X
 </td></tr>
             <tr><td>T0SB</td><td>$<a class="n" href='#_1B83'>1B83</a> .. $1B83</td><td><a class="file" href="#RELOCTR">RELOCTR</a></td> <td><a class="x" href='#DR3'   >DR3   </a> </td> <td><a class='line' href='#RELOCTR.184'>184</a></td> <td align='right'>    1</td><td>Start Address in ADRTAB is never on page 0; Change Absolute JMP to BNE:
 <br>From:
