Remove const from AS1VT AS2VT to prevent confusion

--- a/dos33.html
+++ b/dos33.html
@@ -813,22 +813,22 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                                                                     ; *sigh* Too lazy to add a single empty ';' line seperator before IBVT ???
                                                                                     ; Intentionally adding an empty line as a spacer to improve readability *<b>shock</b>*
                                                                                     ;
-                                                                                    ; The IBVT, AS1VT, and AS2VT are Read-Only (after being relocated)
-1D62:36 E8          068 <a class='d' name='IBVT'     >IBVT        </a>DW <a class='x' href='#IBCHN'>IBCHN</a>                                        ; [-] <i>CONST</i> Integer Basic Vector Table
+                                                                                    ; *<span class='note'>note</a>* IBVT, AS1VT, and AS2VT are Read-Only (after being relocated to high mem.)
+1D62:36 E8          068 <a class='d' name='IBVT'     >IBVT        </a>DW <a class='x' href='#IBCHN'>IBCHN</a>                                        ; [-] Integer Basic Vector Table
 1D64:E5 25          069             DW <a class='x' href='#IBRUN' >IBRUN </a>                                       ; [<a class='line' href='#RELOCTR.292'>2</a>]
 1D66:E3 E3          070             DW <a class='x' href='#IBBRK' >IBBRK </a>                                       ; [-]
 1D68:00 E0          071             DW <a class='x' href='#IBGO'  >IBGO  </a>                                       ; [-]
 1D6A:03 E0          072             DW <a class='x' href='#IBCONT'>IBCONT</a>                                       ; [-]
                     073 <a class='d' name='IBVTL'    >IBVTL       </a>EQU *-<a class='v' href='#IBVT'>IBVT</a>                                      ; Length = $A bytes so we don't over-write ASEQ
-                    074 ;                                                           ; <i>CONST</i> /sarcasm Because it is obvious
+                    074 ;                                                           ;     /sarcasm Because it is obvious
 1D6C:FC 24          075 <a class="d" name="AS1VT"    >AS1VT       </a>DW <a class='x' href='#ASRUN1'>ASRUN1</a>                                       ; [<a class='line' href='#RELOCTR.294'>3</a>]   1 = ROM, and
 1D6E:FC 24          076             DW <a class='x' href='#ASRUN1' >ASRUN1 </a>                                      ; [3]   2 = RAM, right?
 1D70:65 D8          077             DW <a class='x' href='#ASBRK1' >ASBRK1 </a>                                      ; [-]   ASCNTU1 (Continue) <a href='http://www.txbobsc.com/scsc/scdocumentor/D365.html'>S-C DocuMentor $D365</a>
-1D72:00 E0          078             DW <a class='x' href='#IBGO'   >IBGO   </a>                                      ; [-]   ASRSEQ1 (???)
+1D72:00 E0          078             DW <a class='x' href='#IBGO'   >IBGO   </a>                                      ; [-]   ASRSEQ1 (ResetQ???)
 1D74:3C D4          079             DW <a class='x' href='#ASCNTU1'>ASCNTU1</a>                                      ; [-] Why not IBCONT??? $E003: JMP $D43C ; Applesoft (Warm) <a href='http://jamtronix.com/files/applesoft.html#RESTART'  >RESTART</a> 
 1D76:F2 D4          080             DW <a class='x' href='#ASRSEQ1'>ASRSEQ1</a>                                      ; [-] Applesoft <a href='http://jamtronix.com/files/applesoft.html#FIX.LINKS'>FIX.LINKS</a>
                     081 <a class="d" name="AS1VTL"   >AS1VTL      </a>EQU *-<a class='v' href='#AS1VT'>AS1VT</a>
-                    082 ;                                                           ; <i>CONST</i> Copied into <a class="v" href="#IBASVT">IBASVT</a> via INIT_AS_RAM, oh wait, <a class="x" href=#"INITC">INITC</a> 
+                    082 ;                                                           ; Copied into <a class="v" href="#IBASVT">IBASVT</a> via INIT_AS_RAM, oh wait, <a class="x" href=#"INITC">INITC</a> 
 1D78:06 25          083 <a class="d" name="AS2VT"    >AS2VT       </a>DW <a class="x" href="#ASRUN2">ASRUN2</a>                                       ; [<a class='line' href='#RELOCTR.296'>4</a>] <a class='mem' name='_1D78'>wastes</a> 12 bytes on Apple ][+ or newer
 1D7A:06 25          084             DW <a class="x" href="#ASRUN2" >ASRUN2 </a>                                      ; [4] Type 2: AppleSoft in RAM Vector Table (early Apple 1 or ][ ???)
 1D7C:67 10          085             DW <a class="x" href="#ASBRK2" >ASBRK2 </a>                                      ; [-]
