--- a/dos33.html
+++ b/dos33.html
@@ -800,41 +800,41 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1D54:7C 22          055             DW <a class='x' href='#EVAR'>EVAR</a>-1                                       ; [0] last byte relocated in Entry [<a class='line' href='#RELOCTR.292'>0</a>] <a class='v' href='#ADRTAB'>ADRTAB</a>
                     056 <a class='d' name='EAT1'>EAT1        </a>EQU *                                           ; End Address Table 1
                     057             PAGE
-                    058 ;
-                    059 ;NON-RELOCATING ADRS                                        ; *note* Annotating [-] to mean <i>addresss is not relocated</i> in <a class='v' href='#ADRTAB'>ADRTAB</a>
-                    060 ;
+                    058 ;                                                           ; *note* Annotating [-] to mean <i>addresss is not relocated</i> in <a class='v' href='#ADRTAB'>ADRTAB</a>
+                    059 ;NON-RELOCATING ADRS
+                    060 ;                                                           ; Using a,b,c,d,e,f for abbreviated field names in IBASVT
                     061 <a class='d' name='IBASVT'>IBASVT      </a>EQU *                                           ; <i>ACTIVE</i> table but <a class='mem' name='_1D56'>waste</a> disk space (12 bytes @ $56) storing it!
-1D56:36 E8          062 <a class='d' name='CHAIN' >CHAIN       </a>DW <a class='x' href='#IBCHN' >IBCHN </a>                                       ; [-] Really? Forces <i>another</i> table entry [1] in <a class='v' href='#ADRTAB'>ADRTAB</a>
-1D58:E5 24          063 <a class='d' name='RUN'   >RUN         </a>DW <a class='x' href='#IBRUN' >IBRUN </a>                                       ; [<a class='line' href='#RELOCTR.290'>1</a>] Repeat after me: You **group**
-1D5A:E3 E3          064 <a class='d' name='BREAK' >BREAK       </a>DW <a class='x' href='#IBBRK' >IBBRK </a>                                       ; [-]     CONST data together THEN
-1D5C:00 E0          065 <a class='d' name='GO'    >GO          </a>DW <a class='x' href='#IBGO'  >IBGO  </a>                                       ; [-]     VARIABLE data together
-1D5E:03 E0          066 <a class='d' name='CONT'  >CONT        </a>DW <a class='x' href='#IBCONT'>IBCONT</a>       ; BASIC CONT ENTRY POINT        ; [-] You (almost) *never* interleave them
-1D60:00 00          067 <a class='d' name='ASEQ'  >ASEQ        </a>DW 0                                            ;     that just leads to data+code bloat
+1D56:36 E8          062 <a class='d' name='CHAIN' >CHAIN       </a>DW <a class='x' href='#IBCHN' >IBCHN </a>                                       ;a[-] Really? Forces <i>another</i> table entry [1] in <a class='v' href='#ADRTAB'>ADRTAB</a>
+1D58:E5 24          063 <a class='d' name='RUN'   >RUN         </a>DW <a class='x' href='#IBRUN' >IBRUN </a>                                       ;b[<a class='line' href='#RELOCTR.290'>1</a>] Repeat after me: You **group**
+1D5A:E3 E3          064 <a class='d' name='BREAK' >BREAK       </a>DW <a class='x' href='#IBBRK' >IBBRK </a>                                       ;c[-]     CONST data together THEN
+1D5C:00 E0          065 <a class='d' name='GO'    >GO          </a>DW <a class='x' href='#IBGO'  >IBGO  </a>                                       ;d[-]     VARIABLE data together
+1D5E:03 E0          066 <a class='d' name='CONT'  >CONT        </a>DW <a class='x' href='#IBCONT'>IBCONT</a>       ; BASIC CONT ENTRY POINT        ;e[-] You (almost) *never* interleave them
+1D60:00 00          067 <a class='d' name='ASEQ'  >ASEQ        </a>DW 0                                            ;f    that just leads to data+code bloat
                                                                                     ; *sigh* Too lazy to add a single empty ';' line seperator before IBVT ???
                                                                                     ; Intentionally adding an empty line as a spacer to improve readability *<b>shock</b>*
                                                                                     ;
                                                                                     ; *<span class='note'>note</a>* IBVT, AS1VT, and AS2VT are Read-Only (after being relocated to high mem.)
-1D62:36 E8          068 <a class='d' name='IBVT'     >IBVT        </a>DW <a class='x' href='#IBCHN'>IBCHN</a>                                        ; [-] Integer Basic Vector Table
-1D64:E5 25          069             DW <a class='x' href='#IBRUN' >IBRUN </a>                                       ; [<a class='line' href='#RELOCTR.292'>2</a>]
-1D66:E3 E3          070             DW <a class='x' href='#IBBRK' >IBBRK </a>                                       ; [-]
-1D68:00 E0          071             DW <a class='x' href='#IBGO'  >IBGO  </a>                                       ; [-]
-1D6A:03 E0          072             DW <a class='x' href='#IBCONT'>IBCONT</a>                                       ; [-]
+1D62:36 E8          068 <a class='d' name='IBVT'     >IBVT        </a>DW <a class='x' href='#IBCHN'>IBCHN</a>                                        ;a[-] Integer Basic Vector Table
+1D64:E5 25          069             DW <a class='x' href='#IBRUN' >IBRUN </a>                                       ;b[<a class='line' href='#RELOCTR.292'>2</a>]
+1D66:E3 E3          070             DW <a class='x' href='#IBBRK' >IBBRK </a>                                       ;c[-]
+1D68:00 E0          071             DW <a class='x' href='#IBGO'  >IBGO  </a>                                       ;d[-]
+1D6A:03 E0          072             DW <a class='x' href='#IBCONT'>IBCONT</a>                                       ;e[-]
                     073 <a class='d' name='IBVTL'    >IBVTL       </a>EQU *-<a class='v' href='#IBVT'>IBVT</a>                                      ; Length = $A bytes so we don't over-write ASEQ
                     074 ;                                                           ;     /sarcasm Because it is obvious
-1D6C:FC 24          075 <a class="d" name="AS1VT"    >AS1VT       </a>DW <a class='x' href='#ASRUN1'>ASRUN1</a>                                       ; [<a class='line' href='#RELOCTR.294'>3</a>]   1 = ROM, and
-1D6E:FC 24          076             DW <a class='x' href='#ASRUN1' >ASRUN1 </a>                                      ; [3]   2 = RAM, right?
-1D70:65 D8          077             DW <a class='x' href='#ASBRK1' >ASBRK1 </a>                                      ; [-]   ASCNTU1 (Continue) <a href='http://www.txbobsc.com/scsc/scdocumentor/D365.html'>S-C DocuMentor $D365</a>
-1D72:00 E0          078             DW <a class='x' href='#IBGO'   >IBGO   </a>                                      ; [-]   ASRSEQ1 (ResetQ???)
-1D74:3C D4          079             DW <a class='x' href='#ASCNTU1'>ASCNTU1</a>                                      ; [-] Why not IBCONT??? $E003: JMP $D43C ; Applesoft (Warm) <a href='http://jamtronix.com/files/applesoft.html#RESTART'  >RESTART</a> 
-1D76:F2 D4          080             DW <a class='x' href='#ASRSEQ1'>ASRSEQ1</a>                                      ; [-] Applesoft <a href='http://jamtronix.com/files/applesoft.html#FIX.LINKS'>FIX.LINKS</a>
+1D6C:FC 24          075 <a class="d" name="AS1VT"    >AS1VT       </a>DW <a class='x' href='#ASRUN1'>ASRUN1</a>                                       ;a[<a class='line' href='#RELOCTR.294'>3</a>]   1 = ROM, and
+1D6E:FC 24          076             DW <a class='x' href='#ASRUN1' >ASRUN1 </a>                                      ;b[3]   2 = RAM, right?
+1D70:65 D8          077             DW <a class='x' href='#ASBRK1' >ASBRK1 </a>                                      ;c[-]   ASCNTU1 (Continue) <a href='http://www.txbobsc.com/scsc/scdocumentor/D365.html'>S-C DocuMentor $D365</a>
+1D72:00 E0          078             DW <a class='x' href='#IBGO'   >IBGO   </a>                                      ;d[-]   ASRSEQ1 (ResetQ???)
+1D74:3C D4          079             DW <a class='x' href='#ASCNTU1'>ASCNTU1</a>                                      ;e[-] Why not IBCONT??? $E003: JMP $D43C ; Applesoft (Warm) <a href='http://jamtronix.com/files/applesoft.html#RESTART'  >RESTART</a> 
+1D76:F2 D4          080             DW <a class='x' href='#ASRSEQ1'>ASRSEQ1</a>                                      ;f[-] Applesoft <a href='http://jamtronix.com/files/applesoft.html#FIX.LINKS'>FIX.LINKS</a>
                     081 <a class="d" name="AS1VTL"   >AS1VTL      </a>EQU *-<a class='v' href='#AS1VT'>AS1VT</a>
                     082 ;                                                           ; Copied into <a class="v" href="#IBASVT">IBASVT</a> via INIT_AS_RAM, oh wait, <a class='x' href='#INITC'>INITC</a>
-1D78:06 25          083 <a class="d" name="AS2VT"    >AS2VT       </a>DW <a class="x" href="#ASRUN2">ASRUN2</a>                                       ; [<a class='line' href='#RELOCTR.296'>4</a>] <a class='mem' name='_1D78'>wastes</a> 12 bytes on Apple ][+ or newer
-1D7A:06 25          084             DW <a class="x" href="#ASRUN2" >ASRUN2 </a>                                      ; [4] Type 2: AppleSoft in RAM Vector Table (early Apple 1 or ][ ???)
-1D7C:67 10          085             DW <a class="x" href="#ASBRK2" >ASBRK2 </a>                                      ; [-]
-1D7E:84 1D          086             DW <a class="x" href="#DBINIT" >DBINIT </a>                                      ; [<a class='line' href='#RELOCTR.298'>5</a>]
-1D80:3C 0C          087             DW <a class="x" href="#ASCNTU2">ASCNTU2</a>                                      ; Continue (Warm Restart) and R*s*E*q ???
-1D82:F2 0C          088             DW <a class="x" href="#ASRSEQ2">ASRSEQ2</a>                                      ; See Applesoft source Line #70 <a href='https://github.com/mist64/msbasic/blob/master/program.s#L70'>RESTART</a> and Line #270 <a href='https://github.com/mist64/msbasic/blob/master/program.s#L270'>FIX LINKS</a>
+1D78:06 25          083 <a class="d" name="AS2VT"    >AS2VT       </a>DW <a class="x" href="#ASRUN2">ASRUN2</a>                                       ;a[<a class='line' href='#RELOCTR.296'>4</a>] <a class='mem' name='_1D78'>wastes</a> 12 bytes on Apple ][+ or newer
+1D7A:06 25          084             DW <a class="x" href="#ASRUN2" >ASRUN2 </a>                                      ;b[4] Type 2: AppleSoft in RAM Vector Table (early Apple 1 or ][ ???)
+1D7C:67 10          085             DW <a class="x" href="#ASBRK2" >ASBRK2 </a>                                      ;c[-]
+1D7E:84 1D          086             DW <a class="x" href="#DBINIT" >DBINIT </a>                                      ;d   [<a class='line' href='#RELOCTR.298'>5</a>]
+1D80:3C 0C          087             DW <a class="x" href="#ASCNTU2">ASCNTU2</a>                                      ;e   Continue (Warm Restart) and R*s*E*q ???
+1D82:F2 0C          088             DW <a class="x" href="#ASRSEQ2">ASRSEQ2</a>                                      ;f   See Applesoft source Line #70 <a href='https://github.com/mist64/msbasic/blob/master/program.s#L70'>RESTART</a> and Line #270 <a href='https://github.com/mist64/msbasic/blob/master/program.s#L270'>FIX LINKS</a>
                     089 <a class="d" name="AS2VTL"   >AS2VTL      </a>EQU *-<a class="v" href="#AS2VT">AS2VT</a>
                     090             PAGE
                     091 ;
