--- a/dos33.html
+++ b/dos33.html
@@ -304,8 +304,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     005 <a class="do" name="DIAGMOD">DIAGMOD     </a>EQU  0
                     006 <a class="do" name="DOS33B" >DOS33B      </a>EQU  1
                     007 <a class="do" name="ULC"    >ULC         </a>EQU  0              ; Unofficial commentary
-                    008             INCLUDE <a class="_c00 file" href="#RELOCTR">RELOCTR</a>,,2  ; $1B00 .. $1CFF, T0SA - T0SB
-                    009             INCLUDE <a class="_c01 file" href="#DOSINIT">DOSINIT</a>,,2  ; $1D00 .. $1E80, T0SB - T0SD
+                    008             INCLUDE <a class="_c00 file" href="#RELOCTR">RELOCTR</a>,,2  ; $1B00 .. $1C80, T0SA - T0SB
+                    009             INCLUDE <a class="_c01 file" href="#DOSINIT">DOSINIT</a>,,2  ; $1C81 .. $1E80, T0SB - T0SD
                     010             INCLUDE <a class="_c02 file" href="#DOSHOOK">DOSHOOK</a>,,2  ; $1E81 .. $1FCC, T0SD - T0SE
                     011             INCLUDE <a class="_c03 file" href="#CMDSCAN">CMDSCAN</a>,,2  ; $1FCD .. $2192, T0SE - T1S0
                     012             INCLUDE <a class="_c04 file" href="#XOPNCLS">XOPNCLS</a>,,2  ; $2193 .. $2330, T1S0 - T1S2
@@ -711,7 +711,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     337             PAGE
 
 
-<hr>; === <a class="file" name="DOSINIT">DOSINIT</a> - Command Tables and Interpreter, Page <a class="page" name="page48">48</a>, <b class="ts">T0SB</b>, $<span class='n'>9D00</span> .. $<span class='n'>9E80</span> ===<hr>
+<hr>; === <a class="file" name="DOSINIT">DOSINIT</a> - Command Tables and Interpreter, Page <a class="page" name="page48">48</a>, <b class="ts">T0SB</b> - <b class="ts">T0SD</b>, $<span class='n'>9C81</span> .. $<span class='n'>9E80</span> ===<hr>
                     001 <a class="d" name="HEREL"    >HEREL       </a>HEREL       EQU &gt;*
                     002 <a class="d" name="REMDR"    >REMDR       </a>REMDR       EQU 256-<a class="v" href="#HEREL">HEREL</a>
 1C81:00 00 00       <a class='line' name='DOSINIT.103'>003</a>             ORG *+<a class="v" href="#REMDR">REMDR</a>                                     ; <a class='mem' name='_1C81'>wastes</a> 127 bytes padding to end of sector
@@ -7089,8 +7089,8 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 -->
 
 <pre>
- <span class="c00" href="#RELOCTR">RELOCTR</span> ; $1B00 .. $1CFF, T0SA - T0SB
- <span class="c01" href="#DOSINIT">DOSINIT</span> ; $1D00 .. $1E80, T0SB - T0SD
+ <span class="c00" href="#RELOCTR">RELOCTR</span> ; $1B00 .. $1C80, T0SA - T0SB
+ <span class="c01" href="#DOSINIT">DOSINIT</span> ; $1C81 .. $1E80, T0SB - T0SD
  <span class="c02" href="#DOSHOOK">DOSHOOK</span> ; $1E81 .. $1FCC, T0SD - T0SE
  <span class="c03" href="#CMDSCAN">CMDSCAN</span> ; $1FCD .. $2192, T0SE - T1S0
  <span class="c04" href="#XOPNCLS">XOPNCLS</span> ; $2193 .. $2330, T1S0 - T1S2
@@ -7170,23 +7170,23 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 1C68:<span class="c00">DF 3C 00 38 11 3A 69 3A</span> |_&lt;.8.:i:|
 1C70:<span class="c00">84 3A 00 3D A8 3F C8 3F</span> |.:.=(?H?|
 1C78:<span class="c00">FF 3F 1D 40 00 00 23 00</span> |.?.@..#.|
-1C80:<span class="c00">23 FC FC FC FC FC FC FD</span> |#||||||}|
-1C88:<span class="c00">FC FC FF FC FD FC FC FF</span> |||.|}||.|
-1C90:<span class="c00">FF FC FE FD FE FD FD FE</span> |.|~}~}}~|
-1C98:<span class="c00">FF FC FE FF FD FE FF FD</span> |.|~.}~.}|
-1CA0:<span class="c00">FC FD FD FC FD FE FD FF</span> ||}}|}~}.|
-1CA8:<span class="c00">FC FE FC FC FC FC FC FC</span> ||~|||||||
-1CB0:<span class="c00">FD FC FC FE FC FD FC FC</span> |}||~|}|||
-1CB8:<span class="c00">FF FC FC FE FD FC FD FF</span> |.||~}|}.|
-1CC0:<span class="c00">FC FF FD FE FF FD FF FC</span> ||.}~.}.||
-1CC8:<span class="c00">FC FD FE FF FF FF FC FC</span> ||}~...|||
-1CD0:<span class="c00">FF FF FC FE FD FC FD FD</span> |..|~}|}}|
-1CD8:<span class="c00">FE FF FD FE FF FC FE FE</span> |~.}~.|~~|
-1CE0:<span class="c00">FC FD FC FD FE FD FD FC</span> ||}|}~}}||
-1CE8:<span class="c00">FD FC FF FD FC FF FC FC</span> |}|.}|.|||
-1CF0:<span class="c00">FE FD FC FC FD FC FE FC</span> |~}||}|~||
-1CF8:<span class="c00">FC FD FF FC FC FD FC FC</span> ||}.||}|||
-1D00:<span class="c01">D3 1C 81 1E BD 1E 75 2A</span> |S...=.u*| DOSINIT, $1D00 .. $1E80, T0SC - T0SD
+1C80:<span class="c00">23</span> <span class="c01">FC FC FC FC FC FC FD</span> |#||||||}| DOSINIT, $1C81 .. $1E80, T0SC - T0SD
+1C88:<span class="c01">FC FC FF FC FD FC FC FF</span> |||.|}||.|
+1C90:<span class="c01">FF FC FE FD FE FD FD FE</span> |.|~}~}}~|
+1C98:<span class="c01">FF FC FE FF FD FE FF FD</span> |.|~.}~.}|
+1CA0:<span class="c01">FC FD FD FC FD FE FD FF</span> ||}}|}~}.|
+1CA8:<span class="c01">FC FE FC FC FC FC FC FC</span> ||~|||||||
+1CB0:<span class="c01">FD FC FC FE FC FD FC FC</span> |}||~|}|||
+1CB8:<span class="c01">FF FC FC FE FD FC FD FF</span> |.||~}|}.|
+1CC0:<span class="c01">FC FF FD FE FF FD FF FC</span> ||.}~.}.||
+1CC8:<span class="c01">FC FD FE FF FF FF FC FC</span> ||}~...|||
+1CD0:<span class="c01">FF FF FC FE FD FC FD FD</span> |..|~}|}}|
+1CD8:<span class="c01">FE FF FD FE FF FC FE FE</span> |~.}~.|~~|
+1CE0:<span class="c01">FC FD FC FD FE FD FD FC</span> ||}|}~}}||
+1CE8:<span class="c01">FD FC FF FD FC FF FC FC</span> |}|.}|.|||
+1CF0:<span class="c01">FE FD FC FC FD FC FE FC</span> |~}||}|~||
+1CF8:<span class="c01">FC FD FF FC FC FD FC FC</span> ||}.||}|||
+1D00:<span class="c01">D3 1C 81 1E BD 1E 75 2A</span> |S...=.u*| T0SC
 1D08:<span class="c01">93 2A 60 2A 00 1B BB 35</span> |.*`*..;5|
 1D10:<span class="c01">EA 1E 11 1F 22 1F 2E 1F</span> |j..."...|
 1D18:<span class="c01">51 1F 60 1F 70 1F 4E 25</span> |Q.`.p.N%|
